chore(git): ignore env, media y private para evitar secretos en repo

--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,8 @@ media/
 static/images/
 static/icons/
 static/img/
-docs/
+static/avatars/
+private/cv.pdf
 # Ignorar carpeta staticfiles en la raíz
 /staticfiles/
 
