--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,14 +1,13 @@
-# 1) Traemos Python, pip y ffmpeg
-[phases.setup]
-# Nota: añadimos explícitamente python312Packages.pip
-nixPkgs = ["python312", "python312Packages.pip", "ffmpeg"]
+# Usa el provider oficial de Python de Nixpacks
+[providers.python]
+version = "3.12"
 
-# 2) Instala dependencias con pip (ya disponible)
+# Si necesitas ffmpeg, añádelo como nixPkg adicional
+[phases.setup]
+nixPkgs = ["ffmpeg"]
+
 [phases.install]
 cmds = [
   "/opt/venv/bin/python -m pip install --upgrade pip",
   "/opt/venv/bin/pip install -r requirements.txt"
 ]
-# 3) Arranque: migraciones + collectstatic + gunicorn
-[start]
-cmd = "python manage.py migrate --noinput && python manage.py collectstatic --noinput && /opt/venv/bin/gunicorn portfolio.wsgi:application --bind 0.0.0.0:${PORT:-8000}"
